--- a/assets/style.css
+++ b/assets/style.css
@@ -95,6 +95,8 @@ body {
 
 .answer-btn {
   padding: 1rem;
+  color: #666;
+  font-size: 1rem;
   background: var(--secondary-color);
   border: 2px solid #eadbc8;
   border-radius: 10px;
@@ -121,7 +123,7 @@ body {
 }
 
 .progress-bar {
-  margin-top: 20px;
+  margin-top: 2rem;
   width: 100%;
   height: 10px;
   border-radius: 5px;
